updates
making vm modifications to passwords